[package]
name = "crabbycryptotracker"   # The name of my crate/project
version = "0.1.0"              # Semantic version: major.minor.patch
edition = "2024"               # Rust edition (2024 adds new language features)

[dependencies]
# Async runtime. 'full' enables all major features (IO, timers, macros, etc.)
tokio = { version = "1", features = ["full"] }  

# Asynchronous WebSocket client using Tokio.
# 'rustls-tls-native-roots' enables secure (wss://) connections without OpenSSL.
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }

# Provides utilities like StreamExt and SinkExt for working with async streams.
futures-util = "0.3"  

# Used to serialize/deserialize JSON and other formats.
# 'derive' lets us use #[derive(Deserialize)] in your structs.
serde = { version = "1.0", features = ["derive"] }  

# JSON serialization/deserialization support via Serde.
serde_json = "1.0"  

# URL parser/formatter (used to parse the wss:// URL).
url = "2"  

# Library to read and write CSV files (used to load your list of crypto symbols).
csv = "1.3"  

# Provides logging macros like info!, warn!, error!. Does not print by itself.
log = "0.4"  

# A logger implementation that reads log level from the environment (e.g., RUST_LOG=info).
env_logger = "0.10"  
